    (Chaitanya Mishra via namit)

    HIVE-946. Pass context to custom mapper/reducer
    (Paul Yang via namit)

    HIVE-935. Add lateral view (Paul Yang via namit)

    HIVE-571 Add rename column in a table
    (He Yongqiang via namit)

    HIVE-1020 Create a confifuration variable to control speculative execution for reducers in hive
    (namit via He Yongqiang)

  IMPROVEMENTS

    HIVE-760. Add version info to META-INF/MANIFEST.MF.
    (Bill Graham via zshao)

    HIVE-759. Add "hive.intermediate.compression.codec/type" option.
    (Yongqiang He via zshao)

    HIVE-732. Use LazyBinarySerDe (Zheng Shao via namit)

    HIVE-768. Add conf var to disable counters introduced by HIVE-713.
    (Namit Jain via zshao)

    HIVE-679. Adding the basic JDBC methods to allow querying using the
    SQuirrelSQL tool. (Bill Graham via rmurthy)

    HIVE-811. Fix Javadocs. (Namit Jain via zshao)

    HIVE-813. Show the actual exception thrown in UDF evaluation
    (Zheng Shao via rmurthy)

    HIVE-756. Performance improvement for RCFile and ColumnarSerDe in Hive.
    (Ning Zhang via zshao)

    HIVE-584. Clean up global and ThreadLocal variables in Hive.
    (Yonqqiang He via zshao)

    HIVE-74. Hive can use CombineFileInputFormat for when the input has many
    small files (Namit Jain via rmurthy)

    HIVE-827. Increase hive.mapjoin.cache.numrows default value.
    (Namit Jain via zshao)

    HIVE-855. UDF: Concat should accept multiple arguments.
    (Paul Yang via zshao)

    HIVE-914. Optimize UDFJson (Paul Yang via namit)

    HIVE-945. custom mappers/reducers should not be initialized at compile time (namit via He Yongqiang)

    HIVE-947. runlength encding for RCFILE (He Yongqiang via namit)

    HIVE-949. avoid deep copy for group by hash table lookup
    (He Yongqiang via namit)

    HIVE-931. optimize group by to use sorting and grouping properties
    (He Yongqiang via namit)

    HIVE-968. remove mapjoin files and use a MRU cache to optimize lookups