@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: line 1:7 Wrong Arguments 3: The function FIELD(str, str1, str2, ...) needs at least two arguments.
