@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: line 2:16 Argument Type Mismatch lintstring: The 2nd argument of function FIELD is expected to a primitive type, but list is found
